@@ -202,6 +202,8 @@ x2goclient (4.1.1.0-0x2go1) UNRELEASED; urgency=medium
       reorder in initializer list.
     - res/i18n/: regenerate translations.
     - res/i18n/x2goclient_es.ts: fixup Spanish translation file.
+    - res/i18n/x2goclient_et.ts: fixup some typos in the Estonian translation
+      file.
   * x2goclient.spec:
     - Respect %{optflags} and pass QMAKE_STRIP=: to fix missing debug info
       issues.
